--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
@@ -142,7 +142,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
@@ -177,7 +177,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
@@ -212,7 +212,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
@@ -247,7 +247,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
@@ -282,7 +282,7 @@
                     </li>
                     <li>
                         <i class='fas fa-map-marker-alt'></i>
-                        <p><span>El-Dokki : micheel bakhoum</span></p>
+                        <p><span>El-Dokki</span></p>
                     </li>
                     <li>
                         <i class="fa fa-dollar"></i>
